# snacc

./: .gitignore  Cargo.toml  README.md  cargo.toml  dist-workspace.toml
.github/workflows/: release.yaml  release.yml
snacc-cli/: Cargo.toml
snacc-cli/src/: main.rs
snacc-cli/wix/: main.wxs
snacc-lib/: Cargo.toml
snacc-lib/src/: lib.rs  tree.rs
snacc-ui/: Cargo.toml
snacc-x/: Cargo.toml
snacc-x/src/: main.rs
src/: .main.rs.swp  copy_last_notebook.rs  main.rs
wix/: License.rtf  main.wxs
