[package]
name = "snacc"
version = "0.1.0"
edition = "2025"

[dependencies]
notify = "6"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
copypasta = "0.10"
dirs = "6.0.0"
once_cell = "1.21.3"
clap = "4.5.40"

[package.metadata.deb]
maintainer = "Simon Bouchard <simon.bouchard31@gmail.com>"
depends = "$auto"
