[package]
name = "snacc-cli"
version = "0.1.1"
edition = "2024"
authors = ["Simon Bouchard <simon.bouchard@gmail.com>"]
license = "MIT"

[package.metadata.bundle]
name = "snacc"
identifier = "com.snacc.cli"
version = "0.1.1"
short_description = "Snacc CLI"
long_description = "A CLI tool that copies notebooks and prints project trees in LLM friendly format."

[dependencies]
snacc-lib = { path = "../snacc-lib" }