[package]
name = "snacc-cli"
version = "0.1.1"
edition = "2021"
authors = ["Simon Bouchard <simon.bouchard@gmail.com>"]
license = "MIT"
description = "A CLI tool that copies notebooks and prints project trees in LLM friendly format"
repository = "https://github.com/simon-bouchard/snacc"
homepage = "https://github.com/simon-bouchard/snacc"

[[bin]]
name = "snacc-cli"
path = "src/main.rs"

[dependencies]
snacc-lib = { path = "../snacc-lib" }
