[package]
name = "snacc-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "6"
chrono = "0.4"
regex = "1"
arboard = "3"
opener = { version = "0.6.1", features = ["reveal"], default-features = false }
winapi = { version = "0.3.9", features = ["winerror"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
copypasta = "0.8"
once_cell = "1"
dirs = "5"
